--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -384,7 +384,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="loading_default_value">Standardwert wird geladen</string>
     <string name="search_and_replace">Suchen / Ersetzen</string>
     <string name="search_for">Suche nach</string>
-    <string name="replace_with">Ersetzen mit</string>
+    <string name="replace_with">Ersetzen durch</string>
     <string name="replace_once">Ersetzen (1)</string>
     <string name="replace_all">Alle ersetzen</string>
     <string name="matches">Matches</string>
