--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -41,5 +41,55 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files">Фајлови</string>
     <string name="document">Документ</string>
     <string name="documents">Документи</string>
+    <string name="html_as_plaintext">HTML (како обичен текст)</string>
+    <string name="theme">Тема</string>
+    <string name="about">За</string>
+    <string name="plaintext">Обичен текст</string>
+    <string name="file">Фајл</string>
+    <string name="image">Слика</string>
+    <string name="font_size">Големина на Фонт</string>
+    <string name="last_modified_witharg">Последна измена: %s</string>
+    <string name="select_this_folder">Избери директориум</string>
+    <string name="select">Избери</string>
+    <string name="create">Создади</string>
+    <string name="select_entries">Избери елемент(и)</string>
+    <string name="one_item_selected">Еден елемент избран</string>
+    <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d елементи избрани</string>
     <string name="name">Име</string>
+    <string name="url_or_path">URL / Рута</string>
+    <string name="insert_link">Внеси Линк</string>
+    <string name="insert_image">Внеси слика</string>
+    <string name="contributors">Соработници</string>
+    <string name="licenses">Лиценци</string>
+    <string name="changelog">Листа на промени</string>
+    <string name="more_info">Повеќе информации</string>
+    <string name="show_license_of_the_app">Покажи лиценца на апликацијата</string>
+    <string name="language">Јазик</string>
+    <string name="deleteme____1">Име</string>
+    <string name="exit">Излез</string>
+    <string name="undo">Поврати</string>
+    <string name="redo">Повтори</string>
+    <string name="more">Повеќе</string>
+    <string name="notebook">Тетратка</string>
+    <string name="help">Помош</string>
+    <string name="task">Задача</string>
+    <string name="category">Категорија</string>
+    <string name="context">Контекст</string>
+    <string name="list">Листа</string>
+    <string name="priority">Приоритет</string>
+    <string name="history">Историја</string>
+    <string name="sync">Синхронизирај</string>
+    <string name="save">Зачувај</string>
+    <string name="update">Ажурирај</string>
+    <string name="format">Формат</string>
+    <string name="contexts">Контексти</string>
+    <string name="project">Проект</string>
+    <string name="projects">Проекти</string>
+    <string name="categories">Категории</string>
+    <string name="none">Ниедно</string>
+    <string name="other">Друго</string>
+    <string name="empty_file">Празен фајл</string>
+    <string name="tasks_with_todays_date">Задачи со денешен датум</string>
+    <string name="general">Општо</string>
+    <string name="resources">Ресурси</string>
 </resources>
