--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -382,6 +382,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_description_format">Formato de descripción de archivo</string>
     <string name="file_description_format_dialog">Formato para la descripción bajo cada archivo en el navegador de archivos. Siga las reglas de SimpleDateFormat, con la adición de FS para mostrar el tamaño del archivo. Deje en blanco para usar el formato predeterminado para su ubicación.\n\nEjemplo de entrada:\nFS yyyy MMM dd hh:mm:ss aa\nFormato de salida:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Cargando valor por defecto</string>
+    <string name="file_settings">Ajustes de archivo</string>
     <string name="search_and_replace">Buscar / Reemplazar</string>
     <string name="search_for">Buscar por</string>
     <string name="replace_with">Reemplazar por</string>
